interview-task-job-management/src/main/java/com/example/testJobManagement/error/JobNotFoundException.java
package com.example.testJobManagement.error;

public class JobNotFoundException extends RuntimeException {

    public JobNotFoundException(String msg) {
        super(msg);
    }

}
